fix: card being covered by toolbar #39

--- a/src/app/pages/cards/pages/cards/cards.component.scss
+++ b/src/app/pages/cards/pages/cards/cards.component.scss
@@ -111,3 +111,7 @@
   top: 0;
   z-index: 999;
 }
+
+.background {
+  z-index: -1;
+}
